# lebai-sdk.rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  lebai_sdk.pyi
.cargo/: config.toml
.github/workflow/: release.yaml
.github/workflows/: build.yml  lua.yml  python.yml  python_asyncio.yml  release.yaml  rust.yml  wasm.yml
.profile/: py-linux-aarch64.env  py-linux-x86_64.env
examples/: mdns.rs
proto/: Cargo.toml  build.rs
proto/src/: io.rs  kinematic.rs  led.rs  lib.rs  modbus.rs  posture.rs  task.rs
proto/src/serde/: kinematic.rs  led.rs  mod.rs  modbus.rs  posture.rs
src/: common.rs  lib.rs  mdns.rs  runtime.rs
src/rpc/: auto.rs  claw.rs  dynamic.rs  flange.rs  io.rs  kinematic.rs  led.rs  mod.rs  modbus.rs  motion.rs  motor.rs  network.rs  plugin.rs  posture.rs  safety.rs  serial.rs  signal.rs  storage.rs  system.rs  task.rs
tests/: test.lua  test.py  thread.rs
tests/lua/: test.lua
tests/python/: test.py  thread.py
