[package]
description = "lebai_sdk"
edition = "2021"
license-file = "LICENSE"
name = "lebai_sdk"
repository = "https://github.com/lebai-robotics/lebai-sdk.rs"
version = "0.1.6"

[workspace]
members = [
  "proto",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "lebai_sdk"

[features]
default = []
ffi_lua = ["cmod/ffi_lua", "mlua"]
ffi_py = ["cmod/ffi_py", "pyo3"]
ffi_py_asyncio = ["ffi_py", "cmod/ffi_py_asyncio", "pyo3"]
ffi_wasm = ["cmod/ffi_wasm", "wasm-bindgen", "wasm-bindgen-futures"]
mdns = ["mdns-sd"]

[dependencies]
async-lock = "2"
cmod = {version = "0"}
futures-timer = "3"
futures-util = "0.3"
jsonrpsee-core = {version = "0.16.0"}
mdns-sd = {version = "0.6", default-features = false, features = ["async"], optional = true}
mlua = {version = "0.8", features = ["lua54"], optional = true}
once_cell = "1"
proto = {package = "lebai-proto", path = "proto"}
pyo3 = {version = "0.18", features = ["abi3-py37"], optional = true}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = {version = "0.2", optional = true}
wasm-bindgen-futures = {version = "0.4", optional = true}

[target.'cfg(target_family = "wasm")'.dependencies]
jsonrpsee-wasm-client = {version = "0.16.0"}
[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonrpsee-ws-client = {version = "0.16.0"}
tokio = {version = "1", features = ["full"]}

[patch.crates-io]
cmod = {git = "https://github.com/rise0chen/cmod.git"}
