[package]
authors = ["rise0chen<rise0chen@163.com>"]
description = "lebai_sdk"
edition = "2021"
license-file = "LICENSE"
name = "lebai_sdk"
repository = "https://github.com/lebai-robotics/lebai-sdk.rs"
version = "0.2.18"

[workspace]
members = [
  "proto",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "lebai_sdk"

[features]
default = []
ffi_lua = ["cmod/ffi_lua", "mlua"]
ffi_py = ["cmod/ffi_py", "pyo3"]
ffi_py_asyncio = ["ffi_py", "cmod/ffi_py_asyncio", "pyo3"]
ffi_wasm = ["cmod/ffi_wasm", "wasm-bindgen", "wasm-bindgen-futures", "futures-timer/wasm-bindgen"]
mdns = ["mdns-sd"]

[dependencies]
async-lock = "3"
cmod = {version = "0.3"}
futures-timer = "3"
futures-util = {version = "0.3", default-features = false}
jsonrpsee-core = {version = "0.24", default-features = false}
mdns-sd = {version = "0.11", default-features = false, features = ["async"], optional = true}
mlua = {version = "0.9", features = ["lua54"], optional = true}
once_cell = {version = "1", default-features = false}
pin-project-lite = "0.2"
proto = {package = "lebai-proto", path = "proto", version = "3"}
pyo3 = {version = "0.20", features = ["abi3-py37"], optional = true}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = {version = "0.2", optional = true}
wasm-bindgen-futures = {version = "0.4", optional = true}

[target.'cfg(target_family = "wasm")'.dependencies]
jsonrpsee-wasm-client = {version = "0.24", default-features = false}
[target.'cfg(not(target_family = "wasm"))'.dependencies]
jsonrpsee-ws-client = {version = "0.24", default-features = false}
tokio = {version = "1", default-features = false, features = ["rt-multi-thread"]}

[patch.crates-io]
