[package]
authors = ["rise0chen<rise0chen@163.com>"]
description = "lebai proto"
edition = "2021"
keywords = ["protobuf"]
license = "MIT"
name = "lebai-proto"
repository = "https://github.com/lebai-robotics/lebai-sdk.rs"
version = "3.1.5"

[dependencies]
jsonrpsee = {version = "0.21", features = ["client-core", "macros"]}
pbjson = "0.6"
pbjson-types = "0.6"
prost = "0.12"
serde = {version = "1", default-features = false, features = ["derive"]}
serde_json = "1"

[build-dependencies]
pbjson-build = "0.6"
pbjsonrpc-build = "0.18"
tonic-build = "0.10"
