[package]
authors = ["rise0chen<rise0chen@163.com>"]
description = "lebai proto"
edition = "2024"
keywords = ["protobuf"]
license = "MIT"
name = "lebai-proto"
repository = "https://github.com/lebai-robotics/lebai-sdk.rs"
version = "3.3.2"

[dependencies]
jsonrpsee = {version = "0.25", features = ["client-core", "macros"]}
pbjson = "0.7"
pbjson-types = "0.7"
prost = "0.13"
serde = {version = "1", default-features = false, features = ["derive"]}
serde_json = "1"

[build-dependencies]
pbjson-build = "0.7"
pbjsonrpc-build = "0.25"
tonic-build = "0.13"
