[package]
authors = ["rise0chen<rise0chen@163.com>"]
description = "lebai proto"
edition = "2024"
keywords = ["protobuf"]
license = "MIT"
name = "lebai-proto"
repository = "https://github.com/lebai-robotics/lebai-sdk.rs"
version = "3.4.3"

[dependencies]
jsonrpsee = {version = "0.26", features = ["client-core", "macros"]}
pbjson = "0.9"
pbjson-types = "0.9"
prost = "0.14"
serde = {version = "1", default-features = false, features = ["derive"]}
serde_json = "1"

[build-dependencies]
pbjson-build = "0.9"
pbjsonrpc-build = "0.26"
tonic-prost-build = "0.14"
